# Fashion_predict

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.pipeline  README.md  cloudbuild.gpu.yaml  cloudbuild.pipeline.yaml  dataset_uniqlo-keyword-parser-script_2026-07-08_13-39-13-897.json  detections_2026-06-29.json  fashion_attributes.json  lounge.json  nightwear.json  pajamas.json  project_tree.txt  pyproject.toml  requirements.txt  sleep.json
fashion-trend-ai/: .env.example  .gitignore
fashion-trend-ai/.gigaide/: gigaide.properties
fashion-trend-ai/app/: config.py
fashion-trend-ai/app/ai/: fashion_context.py  gemini_client.py  gigachat_client.py  prompts.py  vision_context.py
fashion-trend-ai/app/apify/: client.py  normalizer.py  schemas.py
fashion-trend-ai/app/detection/: grounding_dino_runner.py  test_grounding_dino.py
fashion-trend-ai/app/fashion_clip/: main.py
fashion-trend-ai/app/gpu_service/: dino.py  server.py
fashion-trend-ai/app/instagram/: normalizer.py
fashion-trend-ai/app/media/: downloader.py  video_processor.py
fashion-trend-ai/app/pipeline/: run_all.py  run_apify.py  run_detection.py  run_fashion_clip.py  run_gemini.py  run_gigachat_analysis.py  run_local.py  run_segmentation.py  run_vision.py
fashion-trend-ai/tests/: доп.txt
product-trend-ai/: config.py
product-trend-ai/ai/: gemini_client.py  product_gemini_analyzer.py  product_prompts.py
product-trend-ai/fashion/: attributes.py  taxonomy.py
product-trend-ai/pipeline/: run_asos.py  run_hm.py  run_lamoda.py  run_zara.py
(+63 files in other folders)
