[project]
name = "fashion-predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "apify-client>=3.0.3",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.0",
    "gigachat>=0.2.1",
    "google-cloud-storage>=3.12.0",
    "google-genai>=2.9.0",
    "huggingface-hub>=0.36.2",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "playwright>=1.61.0",
    "pycocotools>=2.0.11",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "supervision>=0.29.0.post0",
    "timm>=1.0.27",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "transformers==4.30.2",
    "uvicorn>=0.49.0",
    "yapf>=0.43.0",
]
